# AOC_2025

./: README.md  pyproject.toml  ruff.toml
src/aoc/aoc_2025/day_01/: main.py
src/aoc/aoc_2025/day_02/: main.py
src/aoc/aoc_2025/day_03/: main.py
src/aoc/aoc_2025/day_04/: main.py
src/aoc/aoc_2025/day_05/: main.py
src/aoc/aoc_2025/day_06/: main.py
src/aoc/aoc_2025/day_07/: main.py
src/aoc/aoc_2025/day_08/: main.py
src/aoc/aoc_2025/day_09/: main.py
src/aoc/aoc_2025/day_10/: main.py
src/aoc/aoc_2025/day_11/: main.py
src/aoc/aoc_2025/day_12/: README.md  main.py
src/aoc/utils/: parse_txt.py  structlog.py
src/aoc_2025/: __init__.py
src/aoc_2025/day_01/: main.py
src/aoc_2025/day_02/: main.py
src/aoc_2025/day_03/: main.py
src/aoc_2025/day_04/: main.py
src/aoc_2025/day_05/: main.py
src/aoc_2025/day_06/: main.py
src/aoc_2025/day_07/: main.py
src/aoc_2025/day_08/: main.py
src/aoc_2025/day_09/: main.py
src/aoc_2025/day_10/: main.py
src/aoc_2025/day_11/: main.py
src/aoc_2025/day_12/: main.py
src/aoc_2025/utils/: __init__.py  parse_txt.py  structlog.py
